# fastrag

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  google_test.html  pyproject.toml  pytest.ini  rag-api.postman_collection.json
backend/src/accounts/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/src/accounts/migrations/: 0001_initial.py
backend/src/audit/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/chunking/: apps.py  llamaindex_chunker.py  service.py
backend/src/common/: apps.py  exceptions.py  models.py  pagination.py  storage.py
backend/src/config/: api_router.py  container.py  urls.py
backend/src/documents/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/embeddings/: apps.py  constants.py  service.py
backend/src/faq/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/ingestion/: admin.py  apps.py  models.py  tasks.py  views.py
backend/src/knowledge_bases/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/parsers/: apps.py  llamaindex_parser.py  service.py
backend/src/retrieval/: answer_service.py  apps.py  prompt_builder.py  rag_urls.py  service.py  urls.py  views.py
backend/src/tenants/: admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/src/tests/: conftest.py  test_auth.py  test_documents.py  test_faq.py  test_knowledge_bases.py  test_retrieval.py
backend/src/vector_store/: apps.py  service.py
docs/: README.md  (+4 more)
(+41 files in other folders)
